<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:layout_weight="9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/presetTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_preset"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/presetSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_weight="1"
            android:id="@+id/presetDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/equalizerTitle"
            android:gravity="center"
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_equalizer"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableLayout
            android:id="@+id/equalizerTableLayout"
            android:layout_weight="30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/equalizer_band_min_height"
                android:gravity="center">

                <TextView
                    android:id="@+id/equalizerBandTitle1"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_title_weight"
                    android:gravity="center"
                    android:text="@string/label_first_freq_band"
                    android:textAlignment="center"
                    android:textSize="14sp"/>
                <SeekBar
                    android:id="@+id/equalizerBandSeekbar1"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_seekbar_weight"
                    android:progressTint="@color/colorAccent"
                    android:thumbTint="@color/colorAccent" />

                <TextView
                    android:id="@+id/equalizerBandValue1"
                    android:layout_weight="@dimen/equalizer_band_value_weight"
                    android:gravity="center"
                    android:text="+4.0"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/equalizer_band_min_height"
                android:gravity="center">

                <TextView
                    android:id="@+id/equalizerBandTitle2"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_title_weight"
                    android:gravity="center"
                    android:text="@string/label_second_freq_band"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <SeekBar
                    android:id="@+id/equalizerBandSeekbar2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_seekbar_weight"
                    android:progressTint="@color/colorAccent"
                    android:thumbTint="@color/colorAccent" />

                <TextView
                    android:id="@+id/equalizerBandValue2"
                    android:layout_weight="@dimen/equalizer_band_value_weight"
                    android:gravity="center"
                    android:text="+4.0"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/equalizer_band_min_height"
                android:gravity="center">

                <TextView
                    android:id="@+id/equalizerBandTitle3"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_title_weight"
                    android:gravity="center"
                    android:text="@string/label_third_freq_band"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <SeekBar
                    android:id="@+id/equalizerBandSeekbar3"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_seekbar_weight"
                    android:progressTint="@color/colorAccent"
                    android:thumbTint="@color/colorAccent" />

                <TextView
                    android:id="@+id/equalizerBandValue3"
                    android:layout_weight="@dimen/equalizer_band_value_weight"
                    android:gravity="center"
                    android:text="+4.0"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/equalizer_band_min_height"
                android:gravity="center">

                <TextView
                    android:id="@+id/equalizerBandTitle4"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_title_weight"
                    android:gravity="center"
                    android:text="@string/label_fourth_freq_band"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <SeekBar
                    android:id="@+id/equalizerBandSeekbar4"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_seekbar_weight"
                    android:progressTint="@color/colorAccent"
                    android:thumbTint="@color/colorAccent" />

                <TextView
                    android:id="@+id/equalizerBandValue4"
                    android:layout_weight="@dimen/equalizer_band_value_weight"
                    android:gravity="center"
                    android:text="+4.0"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/equalizer_band_min_height"
                android:gravity="center">

                <TextView
                    android:id="@+id/equalizerBandTitle5"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_title_weight"
                    android:gravity="center"
                    android:text="@string/label_fifth_freq_band"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <SeekBar
                    android:id="@+id/equalizerBandSeekbar5"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_seekbar_weight"
                    android:progressTint="@color/colorAccent"
                    android:thumbTint="@color/colorAccent" />

                <TextView
                    android:id="@+id/equalizerBandValue5"
                    android:layout_weight="@dimen/equalizer_band_value_weight"
                    android:gravity="center"
                    android:text="+4.0"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:divider="@drawable/spacer_medium"
            android:showDividers="middle">

            <Button
                android:id="@+id/applyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_apply" />

            <Button
                android:id="@+id/revertButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_revert" />
        </LinearLayout>

        <TextView
            android:id="@+id/volumeTitle"
            android:gravity="center"
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_volume"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableLayout
            android:id="@+id/volumeTableLayout"
            android:layout_weight="30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/equalizer_band_min_height"
                android:gravity="center">

                <TextView
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_title_weight"
                    android:gravity="center"
                    android:text="@string/title_global"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <SeekBar
                    android:id="@+id/settingsGlobalVolumeSeekbar"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_seekbar_weight"
                    android:progressTint="@color/colorAccent"
                    android:thumbTint="@color/colorAccent" />

                <TextView
                    android:id="@+id/settingsGlobalVolumeValue"
                    android:layout_weight="@dimen/equalizer_band_value_weight"
                    android:gravity="center"
                    android:text="50%"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/equalizer_band_min_height"
                android:gravity="center">

                <TextView
                    android:id="@+id/leftVolumeLabel"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_title_weight"
                    android:gravity="center"
                    android:text="@string/title_left"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <SeekBar
                    android:id="@+id/settingsLeftRightVolumeRatioSeekbar"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_seekbar_weight"
                    android:progressTint="@color/colorAccent"
                    android:thumbTint="@color/colorAccent" />

                <TextView
                    android:id="@+id/rightVolumeLabel"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_title_weight"
                    android:gravity="center"
                    android:text="@string/title_right"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>